refactor(BasePunishCommand): improve argument parsing and encapsulation